# ss_prep_260530

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.controller  README.md  docker-compose.controller.yml  docker-compose.yml  pyproject.toml  requirements-training.txt  zenoh_session_config.json5
checkpoints/: README.md
datasets/: README.md
docs/: ARCHITECTURE.md  MULTI_PC_SETUP.md  ROBOT_INTERFACE.md
launch/: d405_color_only.launch.py
pai_teach/configs/: act.yaml  robot.yaml
pai_teach/data_recorder/: __init__.py  lerobot_writer.py  recorder.py
pai_teach/policy/act/: __init__.py  config.py  train.py
pai_teach/policy/runner/: __init__.py  runner.py
pai_teach/ros2_bridge/: __init__.py  camera_io.py  dg5f_io.py  robot_io.py  types.py  ur10e_io.py
scripts/: check_d405_profiles.sh  check_image_format.sh  check_rates.sh  check_realsense_args.sh  check_topics.sh  check_usb.sh  diagnose.sh  inspect_dataset.sh  inspect_running_cams.sh  make_dummy_dataset.py  mock_robot_publisher.py  probe.sh  probe_subscribe.py  record_demo.py  record_n_episodes.py  record_n_episodes.sh  run_policy.py  sanity_full_cycle.sh  start_cams.sh  start_zenohd_client.sh  start_zenohd_controller.sh  sync_checkpoints.sh  sync_datasets.sh  train.sh  train_act.py
tests/: test_types_and_config.py
